# cpp-middle-project-sprint4

./: CMakeLists.txt  conanfile.py  main.cpp
.devcontainer/: Dockerfile  default
files/: comments.py  if.py  loops.py  many_lines.py  many_parameters.py  sample.py  ternary.py
include/: analyse.hpp  analyse_split.hpp  ast.hpp  ast_extractor.hpp  cmd_options.hpp  file.hpp  function.hpp  metric.hpp  metric_accumulator.hpp  utils.hpp
include/metric_accumulator_impl/: accumulators.hpp  average_accumulator.hpp  categorical_accumulator.hpp  sum_average_accumulator.hpp
include/metric_impl/: code_lines_count.hpp  cyclomatic_complexity.hpp  metrics.hpp  naming_style.hpp  parameters_count.hpp
src/: CMakeLists.txt  analyse.cpp  ast.cpp  ast_extractor.cpp  file.cpp  function.cpp  metric.cpp  metric_accumulator.cpp
src/metric_accumulator_impl/: CMakeLists.txt  average_accumulator.cpp  categorical_accumulator.cpp  sum_average_accumulator.cpp
src/metric_accumulator_impl/tests/: average_accumulator.cpp  sum_average_accumulator.cpp
src/metric_impl/: code_lines_count.cpp  cyclomatic_complexity.cpp  parameters_count.cpp
src/metric_impl/tests/files/: many_lines.py  match_case.py  simple.py
tests/: analyse.cpp  ast.cpp  code_lines_count.cpp  cyclomatic_complexity.cpp  metrics.cpp  parameters_count.cpp
